<resources>
    <string name="app_name">Leaf Area</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_camera">Camera</string>
    <string name="title_activity_act_config_dados">Change Data</string>
    <string name="title_activity_act_config_geral">Settings</string>
    <!--<string name="cameraMain">Câmera</string>-->
    <string name="cameraMain">Camera</string>
    <!--<string name="desc_cameraMain">Tire uma foto para que ela seja analizada</string>-->
    <string name="desc_cameraMain">Take a photo for it to be analyzed</string>
    <string name="desc_img_cameraMain">ImageCamera</string>
    <string name="desc_img_galeriaMain">ImageGaleria</string>
    <!--<string name="galeriaMain">Galeria</string>-->
    <string name="galeriaMain">Gallery</string>
    <!--<string name="desc_galeriaMain">Selecione fotos tiradas anteriormente</string>-->
    <string name="desc_galeriaMain">Select previously taken photos</string>
    <string name="desc_img_dadosMain">ImageDados</string>
    <!--<string name="dadosMain">Dados salvos</string>-->
    <string name="dadosMain">Saved data</string>
    <!--<string name="desc_dadosMain">Visualize dados de análises anteriores</string>-->
    <string name="desc_dadosMain">View data from previous analyzes</string>
    <!--<string name="configMain">Configurações</string>-->
    <string name="configMain">Settings</string>
    <!--<string name="desc_configMain">Clique para alterar parâmetros e esclarecer dúvidas</string>-->
    <string name="desc_configMain">Click to change parameters and answer questions</string>
    <string name="desc_img_cameraOpenCv">cameraOpenCv</string>
    <string name="desc_btn_galeriaOpenCv">btnGaleriaOpenCv</string>
    <string name="desc_btn_cameraOpenCv">btnCameraOpenCv</string>
    <!--<string name="nav_title">Dimensionamento Foliar</string>-->
    <string name="nav_title">Leaf Area</string>
    <!--<string name="historicoDados">Histórico</string>-->
    <string name="historicoDados">Historic</string>
    <string name="desc_img_arrowDados">arrowDados</string>
    <!--<string name="txtLarguraDados">Largura média:</string>-->
    <string name="txtLarguraDados">Average width:</string>
    <!--<string name="txtComprimentoDados">Comprimento médio:</string>-->
    <string name="txtComprimentoDados">Average length:</string>
    <!--<string name="txtAreaDados">Área média:</string>-->
    <string name="txtAreaDados">Average area:</string>
    <!--<string name="txtNomeDados">Nome:</string>-->
    <string name="txtNomeDados">Name:</string>
    <!--<string name="txtInfoDialog">Nesta tela você pode visualizar as análises que ja foram realizadas. Para uma melhor identificação, os dados foram separados de acordo com a data em que foram gerados.</string>-->
    <string name="txtInfoDialog">On this screen you can view the analyzes that have already been carried out. For better identification, the data were separated according to the date they were generated.</string>
    <!--<string name="txtTitleInfoDialog">Informações</string>-->
    <string name="txtTitleInfoDialog">Information</string>
    <!--<string name="close_dialog_dados_info">Fechar</string>-->
    <string name="close_dialog_dados_info">Close</string>
    <string name="desc_img_InfoDialog">ImageInfoDialog</string>
    <string name="desc_img_configMain">ImageConfig</string>
    <string name="cameraNav">Câmera</string>
    <string name="dadosNav">Dados Salvos</string>
    <string name="pref_key">user_quadrado</string>
    <string name="pref_text">preference_text</string>
    <string name="stringDescIconFolha">ícone folha</string>
    <!--<string name="configGeralQuad">Defina a dimensão do lado do quadrado utilizado:</string>-->
    <string name="configGeralQuad">Define the dimension of the side of the square used:</string>
    <!--<string name="name_linha_config_dados">Name:</string>-->
    <string name="name_linha_config_dados">Name:</string>
    <!--<string name="area_linha_config_dados">Área:</string>-->
    <string name="area_linha_config_dados">Area:</string>
    <!--<string name="width_linha_config_dados">Width:</string>-->
    <string name="width_linha_config_dados">Width:</string>
    <!--<string name="length_linha_config_dados">Length:</string>-->
    <string name="length_linha_config_dados">Length:</string>
    <string name="widht_value_linha_config_dados">Widht value</string>
    <string name="lenth_value_linha_config_dados">Lenth value</string>
    <string name="area_value_linha_config_dados">Area value</string>
    <string name="name_of_leaf_linha_config_dados">Name of leaf</string>
    <!--<string name="leaf_name_dialog_alterarfolha">Ex: Folha de Mamona - 1</string>-->
    <string name="leaf_name_dialog_alterar_folha">Ex: Leaf of Bean - 1</string>
    <!--<string name="confirm_dialog_alterar_folha">Confirmar</string>-->
    <string name="confirm_dialog_alterar_folha">Confirm</string>
    <!--<string name="delete_dialog_alterar_folha">Excluir</string>-->
    <string name="delete_dialog_alterar_folha">Delete</string>
    <string name="cm3_config_geral">3 cm</string>
    <string name="cm4_config_geral">4 cm</string>
    <string name="cm5_config_geral">5 cm</string>
    <string name="test_name_act_config_dados">Test Name</string>
    <string name="perimeter_linha_config_dados">Perimeter:</string>
    <string name="perimeter_value_linha_config_dados">Perimeter value</string>
    <string name="txtPerimetroDados">Average Perimeter:</string>
    <string name="title_activity_splash_screen_inicial">Leaf Area</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
