<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="256dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="5dp"
        android:src="@drawable/info"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/desc_img_InfoDialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/txtTitleInfoDialog"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            android:text="@string/txtInfoDialog"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>
</LinearLayout>